--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -39,7 +39,8 @@ $menu = wofi --show drun
 
 exec-once = $terminal
 exec-once = nm-applet &
-exec-once = waybar & hyprpaper
+exec-once = waybar -c ~/.config/waybar/config.conf 
+exec-once = hyprpaper
 # exec-once = waybar & hyprpaper & firefox
 
 
