--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -39,7 +39,7 @@ $menu = wofi --show drun
 
 exec-once = $terminal
 exec-once = nm-applet &
-exec-once = waybar -c ~/.config/waybar/config.conf 
+exec-once = waybar -c ~/.config/waybar/config.conf  &
 exec-once = hyprpaper
 # exec-once = waybar & hyprpaper & firefox
 
@@ -170,9 +170,9 @@ misc {
 # https://wiki.hyprland.org/Configuring/Variables/#input
 input {
     kb_layout = us
-    kb_variant = 
+    kb_variant =
     kb_model =
-    kb_options =
+    kb_options = caps:backspace
     kb_rules =
 
     follow_mouse = 1
@@ -293,3 +293,11 @@ windowrulev2 = suppressevent maximize, class:.*
 # Fix some dragging issues with XWayland
 windowrulev2 = nofocus,class:^$,title:^$,xwayland:1,floating:1,fullscreen:0,pinned:0
 
+
+
+# Screenshot a window
+bind = $mainMod, PRINT, exec, hyprshot -m window
+# Screenshot a monitor
+bind = , PRINT, exec, hyprshot -m output
+# Screenshot a region
+bind = $shiftMod, PRINT, exec, hyprshot -m region
