optimized opacity, wallpaper, keyboard layout, window management, kitty
changed my opacity to show a bit brighter
changed wallpaper to be like kitty themed
added colemak keyboard layout
added remap of window sizing
added kitty coloscheme

--- a/.config/hypr/hyprpaper.conf
+++ b/.config/hypr/hyprpaper.conf
@@ -1,2 +1,7 @@
-preload = /home/lrnzdc3696/Downloads/violet evergarden dark w blue.jpg
-wallpaper = eDP-1, /home/lrnzdc3696/Downloads/violet evergarden dark w blue.jpg
+# CATPPUCIN SAMURAI
+preload = /home/lrnzdc3696/Pictures/samurai.jpg
+wallpaper = eDP-1, /home/lrnzdc3696/Pictures/samurai.jpg
+
+# VIOLET EVERGARDEN
+# preload = /home/lrnzdc3696/Downloads/violet evergarden dark w blue.jpg
+# wallpaper = eDP-1, /home/lrnzdc3696/Downloads/violet evergarden dark w blue.jpg
