--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -86,7 +86,7 @@ decoration {
 
     # Change transparency of focused and unfocused windows
     active_opacity = 0.90
-    inactive_opacity = 0.42
+    inactive_opacity = 0.69
 
     shadow {
         enabled = false
@@ -158,7 +158,7 @@ master {
 
 # https://wiki.hyprland.org/Configuring/Variables/#misc
 misc {
-    force_default_wallpaper = -1 # Set to 0 or 1 to disable the anime mascot wallpapers
+    force_default_wallpaper = 0 # Set to 0 or 1 to disable the anime mascot wallpapers
     disable_hyprland_logo = false # If true disables the random hyprland logo / anime girl background. :(
 }
 
@@ -169,10 +169,10 @@ misc {
 
 # https://wiki.hyprland.org/Configuring/Variables/#input
 input {
-    kb_layout = us
-    kb_variant =
+    kb_layout = us,gb
+    kb_variant = ,colemak
     kb_model =
-    kb_options = caps:backspace
+    kb_options = caps:backspace,grp:alt_shift_toggle
     kb_rules =
 
     follow_mouse = 1
@@ -267,6 +267,24 @@ bindel = ,XF86AudioMute, exec, wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle
 bindel = ,XF86AudioMicMute, exec, wpctl set-mute @DEFAULT_AUDIO_SOURCE@ toggle
 bindel = ,XF86MonBrightnessUp, exec, brightnessctl s 10%+
 bindel = ,XF86MonBrightnessDown, exec, brightnessctl s 10%-
+
+
+# https://wiki.hyprland.org/Configuring/Binds/#submaps
+bind = $mainMod, R, submap, resize # will switch to a submap called resize
+
+submap = resize
+binde = , H, resizeactive, -50 0
+binde = , J, resizeactive, 0 50
+binde = , K, resizeactive, 0 -50
+binde = , L, resizeactive, 50 0
+bind = , escape, submap, reset # use reset to go back to the global submap
+
+submap = reset
+
+# https://wiki.hyprland.org/Configuring/Binds/#catch-all
+# bind = , catchall, submap, reset
+
+# If you get stuck inside a keymap, you can use hyprctl dispatch submap reset to go back. If you do not have a terminal open, tough luck buddy. You have been warned.
 
 # Requires playerctl
 bindl = , XF86AudioNext, exec, playerctl next
