--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -16,7 +16,8 @@
 
 # See https://wiki.hyprland.org/Configuring/Monitors/
 #monitor=,preferred,auto,auto
-monitor=eDP-1,1920x1080@60.02,0x0,1
+# monitor=eDP-1,1920x1080@60.02,0x0,1
+monitor=eDP-1,1690x951@60.02,0x0,1
 
 ###################
 ### MY PROGRAMS ###
@@ -42,6 +43,8 @@ exec-once = nm-applet &
 exec-once = waybar -c ~/.config/waybar/config.conf  &
 exec-once = hyprpaper
 # exec-once = waybar & hyprpaper & firefox
+
+exec = gsettings set org.gnome.desktop.interface gtk-theme "Adwaita-dark" 
 
 
 #############################
