new keybind, move flting window & move focused window

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -29,6 +29,8 @@ monitor=eDP-1,1690x951@60.02,0x0,1
 $terminal = kitty
 $fileManager = dolphin
 $menu = wofi --show drun
+$browser = google-chrome-stable
+$discord = webcord
 
 
 #################
@@ -42,7 +44,9 @@ exec-once = $terminal
 exec-once = nm-applet &
 exec-once = waybar -c ~/.config/waybar/config.conf  &
 exec-once = hyprpaper
-# exec-once = waybar & hyprpaper & firefox
+exec-once = [workspace 1] $terminal
+exec-once = [workspace 2] $browser
+exec-once = [workspace 3] $discord
 
 exec = gsettings set org.gnome.desktop.interface gtk-theme "Adwaita-dark" 
 
@@ -217,15 +221,24 @@ bind = $mainMod, F, exec, $menu
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, O, togglesplit, # dwindle
 
-# Move focus with mainMod + arrow keys
-# bind = $mainMod, left, movefocus, l
-# bind = $mainMod, right, movefocus, r
-# bind = $mainMod, up, movefocus, u
-# bind = $mainMod, down, movefocus, d
+# Move focus
 bind = $mainMod, H, movefocus, l
 bind = $mainMod, L, movefocus, r
 bind = $mainMod, J, movefocus, u
 bind = $mainMod, K, movefocus, d
+
+# Move focused window
+bind = $mainMod SHIFT, H, movewindow, l
+bind = $mainMod SHIFT, L, movewindow, r
+bind = $mainMod SHIFT, J, movewindow, u
+bind = $mainMod SHIFT, K, movewindow, d
+
+# Move floating window
+binde = $mainMod, left, moveactive, -20 0
+binde = $mainMod, right, moveactive, 20 0
+binde = $mainMod, up, moveactive, 0 -20
+binde = $mainMod, down, moveactive, 0 20
+
 
 # Switch workspaces with mainMod + [0-9]
 bind = $mainMod, 1, workspace, 1
@@ -262,6 +275,15 @@ bind = $mainMod, mouse_up, workspace, e-1
 # Move/resize windows with mainMod + LMB/RMB and dragging
 bindm = $mainMod, mouse:272, movewindow
 bindm = $mainMod, mouse:273, resizewindow
+
+
+# Screenshot a window
+bind = $mainMod, PRINT, exec, hyprshot -m window
+# Screenshot a monitor
+bind = , PRINT, exec, hyprshot -m output
+# Screenshot a region
+bind = $shiftMod, PRINT, exec, hyprshot -m region
+
 
 # Laptop multimedia keys for volume and LCD brightness
 bindel = ,XF86AudioRaiseVolume, exec, wpctl set-volume -l 1 @DEFAULT_AUDIO_SINK@ 5%+
@@ -313,12 +335,3 @@ windowrulev2 = suppressevent maximize, class:.*
 
 # Fix some dragging issues with XWayland
 windowrulev2 = nofocus,class:^$,title:^$,xwayland:1,floating:1,fullscreen:0,pinned:0
-
-
-
-# Screenshot a window
-bind = $mainMod, PRINT, exec, hyprshot -m window
-# Screenshot a monitor
-bind = , PRINT, exec, hyprshot -m output
-# Screenshot a region
-bind = $shiftMod, PRINT, exec, hyprshot -m region
