--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -40,15 +40,15 @@ $discord = webcord
 # Autostart necessary processes (like notifications daemons, status bars, etc.)
 # Or execute your favorite apps at launch like this:
 
-exec-once = $terminal
 exec-once = nm-applet &
-exec-once = waybar -c ~/.config/waybar/config.conf  &
+#exec-once = waybar -c ~/.config/waybar/config.conf &
 exec-once = hyprpaper
+exec-once = hyprpanel
 exec-once = [workspace 1] $terminal
 exec-once = [workspace 2] $browser
 exec-once = [workspace 3] $discord
 
-exec = gsettings set org.gnome.desktop.interface gtk-theme "Adwaita-dark" 
+#exec = gsettings set org.gnome.desktop.interface gtk-theme "Adwaita-dark" 
 
 
 #############################
