--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -220,6 +220,7 @@ bind = $mainMod, V, togglefloating,
 bind = $mainMod, F, exec, $menu
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, O, togglesplit, # dwindle
+bind = $mainMod, L, exec, hyprlock
 
 # Move focus
 bind = $mainMod, H, movefocus, l
