added catppuccin rice for wofi

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -28,7 +28,7 @@ monitor=eDP-1,1690x951@60.02,0x0,1
 # Set programs that you use
 $terminal = kitty
 $fileManager = dolphin
-$menu = wofi --show drun
+$menu = wofi --show drun --allow-images --allow-markup --hide-scroll
 $browser = google-chrome-stable
 $discord = webcord
 
@@ -39,7 +39,6 @@ $discord = webcord
 
 # Autostart necessary processes (like notifications daemons, status bars, etc.)
 # Or execute your favorite apps at launch like this:
-
 exec-once = nm-applet &
 #exec-once = waybar -c ~/.config/waybar/config.conf &
 exec-once = hyprpaper
