--- a/.config/hypr/hyprpaper.conf
+++ b/.config/hypr/hyprpaper.conf
@@ -1,6 +1,10 @@
 # CATPPUCIN SAMURAI
-preload = /home/lrnzdc3696/Pictures/samurai.jpg
-wallpaper = eDP-1, /home/lrnzdc3696/Pictures/samurai.jpg
+# preload = /home/lrnzdc3696/Pictures/samurai.jpg
+# wallpaper = eDP-1, /home/lrnzdc3696/Pictures/samurai.jpg
+
+# SOLO LEVELING
+preload = /home/lrnzdc3696/Pictures/sololeveling.png
+wallpaper = eDP-1, /home/lrnzdc3696/Pictures/sololeveling.png
 
 # VIOLET EVERGARDEN
 # preload = /home/lrnzdc3696/Downloads/violet evergarden dark w blue.jpg
